# luducard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Ludocard - A lightweight game save manager for PC (Ludosavi Fork).txt  README.md  ROADMAP.md  package.json
.github/workflows/: main.yaml  release.yaml
assets/: icon.ai
docs/: features_guide.md
lang/: ar-SA.ftl  cs-CZ.ftl  de-DE.ftl  en-US.ftl  eo-UY.ftl  es-ES.ftl  fi-FI.ftl  fr-FR.ftl  it-IT.ftl  ja-JP.ftl  ko-KR.ftl  nl-NL.ftl  no-NO.ftl  pl-PL.ftl  pt-BR.ftl  ru-RU.ftl  sv-SE.ftl  th-TH.ftl  tr-TR.ftl  uk-UA.ftl  vi-VN.ftl  zh-CN.ftl  zh-TW.ftl
src/: api.rs  cloud.rs  lang.rs  main.rs  prelude.rs  report.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: ludocard.toml  luducard.toml
src-tauri/src/: commands.rs  emulator.rs  hotkey.rs  main.rs  watcher.rs
src/resource/: config.rs
src/scan/: layout.rs
supabase/: schema.sql
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/functions/get-download-url/: index.ts
supabase/functions/get-upload-url/: index.ts
ui/: index.html  package.json  tsconfig.tsbuildinfo
ui/src/: App.tsx
ui/src/components/: app-sidebar.tsx
ui/src/components/cloud/: cloud-client.tsx  conflict-resolution-modal.tsx
ui/src/components/dashboard/: library-client.tsx
ui/src/components/game-detail/: game-detail-client.tsx
ui/src/lib/: mock-data.ts  theme-context.tsx
ui/src/pages/: Cloud.tsx  Community.tsx  Dashboard.tsx  GameDetail.tsx  PresetHub.tsx  Scan.tsx  Settings.tsx  Support.tsx
(+2 files in other folders)
